--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Service for HR</title>
+  <title>HR Service</title>
 
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -56,7 +56,7 @@
 
 <body>
   <div class="info">
-    <h1>hrsvc</h1>
+    <h1>hrservice</h1>
     <p>Version 1.0.0</p>
 
     <h3>OpenAPI spec: <a href="/openapi.json">/openapi.json</a></h3>
